bugfix: keyword responsiveness; not showing empty keyword

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -296,13 +296,13 @@ padding-bottom: 35px;
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
-  border-left: 6px solid #ff7b00 !important; 
+  border-left: 4px solid #ff7b00 !important; 
 }
 
 .badgeContainer{
   position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    right: 5px;
 }
 
 .keywordPill{
